@@ -5,12 +5,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
-import ru.cr.hw.controller.BookController;
-import ru.cr.hw.domain.Author;
-import ru.cr.hw.domain.Book;
-import ru.cr.hw.domain.Comment;
-import ru.cr.hw.domain.Genre;
+import ru.cr.hw.dto.AuthorDto;
 import ru.cr.hw.dto.BookDto;
+import ru.cr.hw.dto.CommentDto;
+import ru.cr.hw.dto.GenreDto;
 import ru.cr.hw.repostory.AuthorRepository;
 import ru.cr.hw.repostory.BookRepository;
 import ru.cr.hw.repostory.CommentRepository;
@@ -20,12 +18,9 @@ import ru.cr.hw.services.BookService;
 import ru.cr.hw.services.CommentService;
 import ru.cr.hw.services.GenreService;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
+
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -60,9 +55,9 @@ class BookControllerTest {
     @MockitoBean
     private CommentRepository commentRepository;
 
-    private List<Book> books = List.of(
-            new Book(1L, "Book_Title", new Author(1L, "John Doe"), new Genre(1L, "Fiction")),
-            new Book(2L, "Book_Title_2", new Author(1L, "John Doe"), new Genre(1L, "Fiction"))
+    private List<BookDto> books = List.of(
+            new BookDto(1L, "Book_Title", new AuthorDto(1L, "John Doe"), new GenreDto(1L, "Fiction"), null),
+            new BookDto(2L, "Book_Title_2", new AuthorDto(1L, "John Doe"), new GenreDto(1L, "Fiction"), null)
     );
 
     @Test
@@ -77,60 +72,46 @@ class BookControllerTest {
 
     @Test
     void editPage_WithId_ShouldReturnEditForm() throws Exception {
-        Book book = new Book(1L, "Book_Title", new Author(1L, "John Doe"), new Genre(1L, "Fiction"));
+        BookDto book = new BookDto(1L, "Book_Title", new AuthorDto(1L, "John Doe"), new GenreDto(1L, "Fiction"), null);
 
-        when(bookService.findById(1L)).thenReturn(Optional.of(book));
-        when(authorService.findAll()).thenReturn(Collections.singletonList(new Author()));
-        when(genreService.findAll()).thenReturn(Collections.singletonList(new Genre()));
+        List<AuthorDto> authors = List.of(new AuthorDto(1L, "John Doe"));
+        List<GenreDto> genres = List.of(new GenreDto(1L, "Fiction"));
+
+        when(bookService.findById(1L)).thenReturn(book);
+        when(authorService.findAll()).thenReturn(authors);
+        when(genreService.findAll()).thenReturn(genres);
 
         mockMvc.perform(get("/edit").param("id", "1"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("add_edit"))
                 .andExpect(model().attributeExists("book"))
-                .andExpect(model().attributeExists("allAuthors"))
-                .andExpect(model().attributeExists("allGenres"));
+                .andExpect(model().attribute("isEdit", true))
+                .andExpect(model().attribute("allAuthors", authors))
+                .andExpect(model().attribute("allGenres", genres));
     }
 
     @Test
     void editPage_WithoutId_ShouldReturnEmptyForm() throws Exception {
-        when(authorService.findAll()).thenReturn(Collections.singletonList(new Author()));
-        when(genreService.findAll()).thenReturn(Collections.singletonList(new Genre()));
+        List<AuthorDto> authors = List.of(new AuthorDto(1L, "John Doe"));
+        List<GenreDto> genres = List.of(new GenreDto(1L, "Fiction"));
+
+        when(authorService.findAll()).thenReturn(authors);
+        when(genreService.findAll()).thenReturn(genres);
 
         mockMvc.perform(get("/edit"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("add_edit"))
                 .andExpect(model().attributeExists("book"))
-                .andExpect(model().attributeExists("allAuthors"))
-                .andExpect(model().attributeExists("allGenres"));
+                .andExpect(model().attribute("isEdit", false))
+                .andExpect(model().attribute("allAuthors", authors))
+                .andExpect(model().attribute("allGenres", genres));
     }
-/*
-    @Test
-    void saveBook_ValidData_ShouldRedirect() throws Exception {
-        Author author = new Author();
-        author.setId(1L);
-        Genre genre = new Genre();
-        genre.setId(1L);
-        Book savedBook = new Book();
-        savedBook.setId(1L);
-
-        when(authorService.findById(1L)).thenReturn(Optional.of(author));
-        when(genreService.findById(1L)).thenReturn(Optional.of(genre));
-        when(bookService.insert(any(Book.class))).thenReturn(savedBook);
-
-        mockMvc.perform(post("/edit")
-                        .param("title", "Test Book")
-                        .param("author.id", "1")
-                        .param("genre.id", "1"))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/"));
-    }*/
-
     @Test
     void deleteBook_ExistingId_ShouldRedirect() throws Exception {
-        Book book = new Book();
+        BookDto book = new BookDto();
         book.setId(1L);
 
-        when(bookService.findById(1L)).thenReturn(Optional.of(book));
+        when(bookService.findById(1L)).thenReturn(book);
 
         mockMvc.perform(post("/deleteBook")
                         .param("bookId", "1"))
@@ -142,27 +123,26 @@ class BookControllerTest {
 
     @Test
     void viewPage_ShouldReturnBookDetails() throws Exception {
-        Book book = new Book(1L, "Book_Title", new Author(1L, "John Doe"), new Genre(1L, "Fiction"));
+        BookDto bookDto = new BookDto(1L, "Book_Title", new AuthorDto(1L, "John Doe"), new GenreDto(1L, "Fiction"), null);
+        List<CommentDto> comments = List.of(
+                new CommentDto(1L, "Great book!", 1L),
+                new CommentDto(2L, "Interesting read", 1L)
+        );
 
-        Author author = new Author();
-        author.setId(1L);
-        Genre genre = new Genre();
-        genre.setId(1L);
-        Book savedBook = new Book();
-        savedBook.setId(1L);
 
-        when(bookService.findById(1L)).thenReturn(Optional.of(book));
-        when(authorService.findAll()).thenReturn(Collections.singletonList(new Author()));
-        when(genreService.findAll()).thenReturn(Collections.singletonList(new Genre()));
-        when(commentService.findByBookId(1L)).thenReturn(Collections.emptyList());
+        when(bookService.findById(1L)).thenReturn(bookDto);
+        when(commentService.findByBookId(1L)).thenReturn(comments);
 
         mockMvc.perform(get("/viewbook").param("id", "1"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("view_comments"))
-                .andExpect(model().attributeExists("book"))
-                .andExpect(model().attributeExists("allAuthors"))
-                .andExpect(model().attributeExists("allGenres"))
-                .andExpect(model().attributeExists("comments"));
+                .andExpect(model().attribute("book", bookDto))
+                .andExpect(model().attribute("comments", comments))
+                .andExpect(model().attributeExists("newComment"))
+                .andExpect(model().attribute("newComment",
+                        org.hamcrest.Matchers.hasProperty("bookId", org.hamcrest.Matchers.is(1L))
+                ))
+                .andExpect(model().attributeDoesNotExist("allAuthors", "allGenres", "editingComment", "editingCommentId"));
     }
 
     @Test
@@ -175,12 +155,12 @@ class BookControllerTest {
 
     @Test
     void deleteBook_WhenBookNotFound_ShouldReturn404() throws Exception {
-        when(bookService.findById(999L)).thenReturn(Optional.empty());
+        doThrow(new NotFoundException())
+                .when(bookService).deleteById(999L);
 
         mockMvc.perform(post("/deleteBook").param("bookId", "999"))
-                .andExpect(status().isNotFound())
-                .andExpect(view().name("customError"))
-                .andExpect(model().attributeExists("errorText"));
+                .andExpect(status().isNotFound());
+
     }
 
     @Test
